# agentic-watch

./: README.md  generate_pdf.py  live_test.py  start_backend.bat  start_frontend.bat  test_100_percent.py
backend/: .dockerignore  Dockerfile  init_db.py  openapi.json  requirements.txt  start.sh
backend_v1_backup/: .dockerignore  README.md  crypt.py
database/: clickhouse_schema.sql  postgres_schema.sql
docker/: docker-compose.yml
docs/: api-reference.md  js-sdk.md  python-sdk.md  quick-start.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend_v1_backup/: .dockerignore  package-lock.json  package.json  playwright.config.ts
infra/: docker-compose.yml  (+2 more)
sdk/agentwatch-python/: README.md  pyproject.toml
sdk/agentwatch-python/agentwatch/: __init__.py  decorators.py  telemetry.py
sdk/agentwatch-python/agentwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/agentwatch-python/agentwatch/instrumentation/: __init__.py  anthropic.py  bedrock.py  chroma.py  crewai.py  gemini.py  groq.py  lancedb.py  langchain.py  mcp.py  milvus.py  ollama.py  openai.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
sdk/agentwatch-python/tests/: test_basic.py
sdks/python/: README.md  pyproject.toml
sdks/python/agentwatch/: __init__.py  client.py  exceptions.py  interceptor.py  otel_exporter.py  policy.py  risk.py
sdks/python/agentwatch/frameworks/: autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  semantic_kernel.py
sdks/python/agentwatch/mcp/: interceptor.py
sdks/python/agentwatch/parsers/: anthropic.py  azure_openai.py  base.py  bedrock.py  cohere.py  gemini.py  groq.py  huggingface.py  mistral.py  ollama.py  openai.py  streaming.py  together.py
(+171 files in other folders)
