[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch-sdk"
version = "0.1.0"
description = "Real-time AI agent observability and governance platform SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "AgentWatch", email = "hello@agentwatch.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "httpcore>=0.17.0",
]

[project.optional-dependencies]
all = [
    "langchain",
    "crewai",
    "autogen"
]
